Sat Jun 19 03:35:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb (resolve_klass): fix the
	  exception message when attempting to load an unknown class.  Thanks
	  nobu! [ruby-dev:41399]

	* test/psych/test_psych.rb: test for the exception message

Fri Jun 18 01:50:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* object.c: Object#public_methods, private_methods, etc. returns
	  method ids that belong to the class or the singleton class(es) of
	  the object.  [ruby-dev:41613]

	* class.c: on the other hand, Module#public_instance_methods, etc.
	  returns method ids that belong to the module itself (even if the
	  module is singleton, it does not return method ids of super
	  class(es); see [ruby-core:28837]).

Tue Jun 29 21:16:05 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* ext/stringio/stringio.c (strio_write): add RB_GC_GUARD.

Tue Jun 29 14:41:07 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_realpath_internal, realpath_rec): skip UNC share root
	  on DOSISH platforms.
	  http://pc12.2ch.net/test/read.cgi/tech/1272248179/600

Tue Jun 29 06:41:01 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter (fix
	  [ruby-core:30358]). And hide a root window before starting eventloop.

	* ext/tk/extconf.rb: use tclConfig.sh/tkConfig.sh when frameworks
	  are enabled on MacOS X.

	* ext/tk/stubs.c: dirty hack for frameworks and stubs on MacOS X.

Tue Jun 29 01:44:33 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* ext/dl/lib/dl/func.rb (call): don't overwrite original arguments
	  to defend from GC.
	* test/dl/test_func.rb (test_string): add test for above.

Tue Jun 29 01:41:42 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* include/ruby/ruby.h (static inline rb_gc_guarded_ptr): prevent
	  RB_GC_GUARD_PTR being removed by optimization.

Tue Jun 29 01:22:08 2010  Aaron Patterson <aaron@tenderlovemaking.com>
